--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Norican" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Gloria+Hallelujah|Great+Vibes|Kaushan+Script|MedievalSharp|Permanent+Marker|Norican" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">    
     <title>NSS Amusement Arcade</title>
 </head>
